fixed test-align in show cohort

--- a/src/stylesheets/ShowCohort.scss
+++ b/src/stylesheets/ShowCohort.scss
@@ -1,7 +1,7 @@
 @import 'buttons';
 @import 'vars';
 
-h5 {
+h5, p.cohort-p, h1.cohort-title {
   text-align: center;
 }
 
